[package]
name = "gitauthors"
version = "0.1.0"
edition = "2024"
authors = ["Jorian Woltjer (J0R1AN)"]
license = "MIT OR Apache-2.0"
description = "Collect git author names and emails quickly"
readme = "README.md"
homepage = "https://github.com/JorianWoltjer/git-authors"
repository = "https://github.com/JorianWoltjer/git-authors"
keywords = ["cli", "git", "security", "osint", "github"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
futures = "0.3.31"
git2 = "0.20.2"
indicatif = "0.17.11"
octocrab = { version = "0.44.1", features = ["stream"] }
regex = "1.11.1"
tempfile = "3.20.0"
tokio = { version = "1.47.1", features = ["full"] }
