[package]
name = "gitauthors"
version = "0.2.0"
edition = "2024"
authors = ["Jorian Woltjer (J0R1AN)"]
license = "MIT OR Apache-2.0"
description = "Collect git author names and emails quickly"
readme = "README.md"
homepage = "https://github.com/JorianWoltjer/git-authors"
repository = "https://github.com/JorianWoltjer/git-authors"
keywords = ["cli", "git", "security", "osint", "github"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
futures = "0.3.31"
git2 = "0.20.2"
indicatif = "0.18.0"
octocrab = { version = "0.44.1", features = ["stream"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_qs = "0.15.0"
tempfile = "3.21.0"
tokio = { version = "1.47.1", features = ["full"] }
